<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="918dp"
    android:background="@color/maincolor"
    tools:context=".AddcashFragment"
    tools:layout_editor_absoluteX="50dp"
    tools:layout_editor_absoluteY="14dp">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/textView5"
        android:layout_width="255dp"
        android:layout_height="79dp"
        android:hint="@string/eventname"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546">

        <RadioButton
            android:id="@+id/incomeRadioButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/incomestring" />

        <RadioButton
            android:id="@+id/expenditureRadioButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/paymentstring" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:text="@string/typechoose"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_marginTop="116dp"
        android:hint="@string/descriptionstring"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:hint="@string/inputnumberstring"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="198dp"
        android:layout_height="194dp"
        android:src="@drawable/logo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="选择日期"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:text="@string/save"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />
</androidx.constraintlayout.widget.ConstraintLayout>