<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="299dp"
        android:layout_height="66dp"
        android:autofillHints="Password"
        android:background="@drawable/textsetting"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/hintcolor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <EditText
        android:id="@+id/username"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="299dp"
        android:layout_height="66dp"
        android:autofillHints="Username"
        android:background="@drawable/textsetting"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/hintcolor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="194dp"
        android:layout_marginTop="76dp"
        android:background="@color/maincolor"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3" />

    <TextView
        android:id="@+id/nametext"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/appnamecolor"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/loginbutton"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:background="@drawable/bordersetting"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/loginbutton"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerbutton"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.234"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/registerbutton"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:background="@drawable/bordersetting"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registerbutton"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.234" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/user_agreement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerbutton"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.928" />

    <RadioButton
        android:id="@+id/remember"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:text="@string/remembertext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

</androidx.constraintlayout.widget.ConstraintLayout>