<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".HomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="413dp"
        android:layout_height="831dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"></androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutbutton"
        android:layout_width="411dp"
        android:layout_height="71dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonadd"
            android:layout_width="60dp"
            android:layout_height="62dp"
            android:background="@color/maincolor"
            android:contentDescription="@string/contentdescriptionadd"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add" />

        <ImageButton
            android:id="@+id/imageButtonme"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/maincolor"
            android:contentDescription="@string/contentdescriptionme"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toEndOf="@+id/imageButtonadd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/my" />

        <ImageButton
            android:id="@+id/imageButtonhome"
            android:layout_width="78dp"
            android:layout_height="75dp"
            android:background="@color/maincolor"
            android:contentDescription="@string/contentdescriptiongoal"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonadd"
            app:layout_constraintHorizontal_bias="0.234"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/homepagelogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>